# teacher_desk

./: .gitignore  CHANGES.yml  MANIFEST.in  README.md  _version.py  perfect_code.md  pyproject.toml  setup.py  template.py  tox.ini  toxcov.ini
docs/: _config.yml
teacher_desk/: __init__.py
