[tool.poetry]
name = "teacher_desk"
version = "0.0.1"
description = "Tools for the teacher's desk."
authors = ["skeptycal <skeptycal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
poetry = "^1.0.2"
pylint = "^2.4.4"
pytest = "^5.3.5"
tox = "^3.14.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
